--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,7 +1,6 @@
-Andrew Gacek: <a href="/people/andrew-gacek.html">Andrew Gacek</a>
-John Backes: <a href="/people/john-backes.html">John Backes</a>
-Darren Cofer: <a href="/people/darren-cofer.html">Darren Cofer</a>
-Konrad Slind: <a href="/people/konrad-slind.html">Konrad Slind</a>
+A. Gacek: <a href="/people/andrew-gacek.html">A. Gacek</a>
+J. Backes: <a href="/people/john-backes.html">J. Backes</a>
+D. Cofer: <a href="/people/darren-cofer.html">D. Cofer</a>
+K. Slind: <a href="/people/konrad-slind.html">K. Slind</a>
 
-Mike Whalen: <a href="http://www-users.cs.umn.edu/~whalen/">Mike Whalen</a>
-Michael Whalen: <a href="http://www-users.cs.umn.edu/~whalen/">Michael Whalen</a>
+M. Whalen: <a href="http://www-users.cs.umn.edu/~whalen/">M. Whalen</a>
