Add David Hardin

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,5 +2,6 @@ A. Gacek: <a href="/people/andrew-gacek.html">A. Gacek</a>
 J. Backes: <a href="/people/john-backes.html">J. Backes</a>
 D. Cofer: <a href="/people/darren-cofer.html">D. Cofer</a>
 K. Slind: <a href="/people/konrad-slind.html">K. Slind</a>
+D. Hardin: <a href="/people/david-hardin.html">D. Hardin</a>
 
 M. Whalen: <a href="http://www-users.cs.umn.edu/~whalen/">M. Whalen</a>
