--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,5 +3,6 @@ J. Backes: <a href="/people/john-backes.html">J. Backes</a>
 D. Cofer: <a href="/people/darren-cofer.html">D. Cofer</a>
 K. Slind: <a href="/people/konrad-slind.html">K. Slind</a>
 D. Hardin: <a href="/people/david-hardin.html">D. Hardin</a>
+L. Wagner: <a href="/people/lucas-wagner.html">L. Wagner</a>
 
 M. Whalen: <a href="http://www-users.cs.umn.edu/~whalen/">M. Whalen</a>
