--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,5 +5,7 @@ K. Slind: <a href="/people/konrad-slind.html">K. Slind</a>
 D. Hardin: <a href="/people/david-hardin.html">D. Hardin</a>
 L. Wagner: <a href="/people/lucas-wagner.html">L. Wagner</a>
 J. Davis: <a href="/people/jennifer-davis.html">J. Davis</a>
+I. Amundson: <a href="/people/isaac-amundson.html">I. Amundson</a>
+D. Greve: <a href="/people/david-greve.html">D. Greve</a>
 
 M. Whalen: <a href="http://www-users.cs.umn.edu/~whalen/">M. Whalen</a>
