--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -7,5 +7,6 @@ L. Wagner: <a href="/people/lucas-wagner.html">L. Wagner</a>
 J. Davis: <a href="/people/jennifer-davis.html">J. Davis</a>
 I. Amundson: <a href="/people/isaac-amundson.html">I. Amundson</a>
 D. Greve: <a href="/people/david-greve.html">D. Greve</a>
+J. Babar: <a href="/people/junaid-babar.html">J. Babar</a>
 
 M. Whalen: <a href="http://www-users.cs.umn.edu/~whalen/">M. Whalen</a>
