--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,5 +8,6 @@ J. Davis: <a href="/people/jennifer-davis.html">J. Davis</a>
 I. Amundson: <a href="/people/isaac-amundson.html">I. Amundson</a>
 D. Greve: <a href="/people/david-greve.html">D. Greve</a>
 J. Babar: <a href="/people/junaid-babar.html">J. Babar</a>
+C. Liu: <a href="/people/cong-liu.html">C. Liu</a>
 
 M. Whalen: <a href="http://www-users.cs.umn.edu/~whalen/">M. Whalen</a>
